network-policy/inspect.local.1117211548679412442/namespaces/openshift-authentication/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2026-02-26T19:56:26Z"
    labels:
      app: oauth-openshift
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: authentication-operator
      operation: Update
      time: "2026-02-26T19:56:26Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2026-02-26T20:02:01Z"
    name: oauth-openshift
    namespace: openshift-authentication
    resourceVersion: "21996"
    uid: b8af2eac-07ba-4c14-bf0f-505c5bba938a
  spec:
    host: oauth-openshift.apps.shrocp4upi417ovn.lab.upshift.rdu2.redhat.com
    port:
      targetPort: 6443
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: passthrough
    to:
      kind: Service
      name: oauth-openshift
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2026-02-26T20:02:01Z"
        status: "True"
        type: Admitted
      host: oauth-openshift.apps.shrocp4upi417ovn.lab.upshift.rdu2.redhat.com
      routerCanonicalHostname: router-default.apps.shrocp4upi417ovn.lab.upshift.rdu2.redhat.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "428036"
